fixing mini feed header issue and spacing in footer

--- a/client/src/pages/Feed/Feed.css
+++ b/client/src/pages/Feed/Feed.css
@@ -43,6 +43,7 @@
     background-color:black;
     padding:2rem;
     padding-left:0;
+    z-index:5;
 }
 
 #Feed .sidebarWrap .sidebarFooter {
