--- a/client/src/pages/Profile/profile.css
+++ b/client/src/pages/Profile/profile.css
@@ -63,6 +63,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    z-index:5;
 }
 
 .sidebarFooter {
